stylesheet changes to improve the homepage and fix dark mode for the navigation cards and search function (#697)

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -157,6 +157,7 @@ $navbar-light-active-color:         $primary;
 // Cards
 
 $card-border-color:                 $gray-200;
+$card-body-color:                   $rkvst-lightblue;
 
 // Alerts
 //
